--- a/index.html
+++ b/index.html
@@ -10,6 +10,29 @@
 
 <body>
     <h1>Drink Water</h1>
+    <h3>Goal: 2 Liters </h3>
+
+    <div class="cup">
+        <div class="remained" id="remained">
+            <span id="liters">1.5L</span>
+            <small>remained</small>
+        </div>
+
+        <div class="percentage" id="percentage">
+            20%
+        </div>
+        <p class="text">Select howmay galss of water that you have drink </p>
+        <div class="cups">
+            <div class="cup cup-small full">250 ml</div>
+            <div class="cup cup-small full">250 ml</div>
+            <div class="cup cup-small">250 ml</div>
+            <div class="cup cup-small">250 ml</div>
+            <div class="cup cup-small">250 ml</div>
+            <div class="cup cup-small">250 ml</div>
+            <div class="cup cup-small">250 ml</div>
+            <div class="cup cup-small">250 ml</div>
+        </div>
+    </div>
 </body>
 
 </html>
