small cups styling

--- a/index.html
+++ b/index.html
@@ -22,18 +22,21 @@
         <div class="percentage" id="percentage">
             20%
         </div>
-        <p class="text">Select howmay galss of water that you have drink </p>
-        <div class="cups">
-            <div class="cup cup-small full">250 ml</div>
-            <div class="cup cup-small full">250 ml</div>
-            <div class="cup cup-small">250 ml</div>
-            <div class="cup cup-small">250 ml</div>
-            <div class="cup cup-small">250 ml</div>
-            <div class="cup cup-small">250 ml</div>
-            <div class="cup cup-small">250 ml</div>
-            <div class="cup cup-small">250 ml</div>
-        </div>
     </div>
+    <p class="text">Select how may galss of water that you have drink </p>
+
+    <div class="cups">
+        <div class="cup cup-small full">250 ml</div>
+
+        <div class="cup cup-small full">250 ml</div>
+        <div class="cup cup-small">250 ml</div>
+        <div class="cup cup-small">250 ml</div>
+        <div class="cup cup-small">250 ml</div>
+        <div class="cup cup-small">250 ml</div>
+        <div class="cup cup-small">250 ml</div>
+        <div class="cup cup-small">250 ml</div>
+    </div>
+
     <script src="custom.js"></script>
 </body>
 
