update HTML code

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 
     <div class="cup">
         <div class="remained" id="remained">
-            <span id="liters">1.5L</span>
+            <span id="liters"></span>
             <small>remained</small>
         </div>
 
         <div class="percentage" id="percentage">
-            20%
+
         </div>
     </div>
     <p class="text">Select how may galss of water that you have drink </p>
